# app/Http/Controllers/Controller.php
@@ -16,14 +16,45 @@ use OpenApi\Annotations as OA;
  *              "url": "https://via.placeholder.com/190x90.png?text=MarketPlace"
  *          }
  *      },
- *      title="Marketplace Swager API Documentation",
- *      description="Marketplace Swager API Description",
+ *      title="Marketplace Back End Swager API Documentation",
+ *      description="Marketplace Back End Swager API Description",
  *      @OA\Contact(
  *          email="example@google.com"
  *      ),
  *     @OA\License(
  *         name="Apache 2.0",
  *         url="https://www.apache.org/licenses/LICENSE-2.0.html"
+ *     )
+ * )
+ * @OA\Tag(
+ *     name="product",
+ *     description="Everything about your products",
+ *     @OA\ExternalDocumentation(
+ *         description="Find out more",
+ *         url="https://swagger.io"
+ *     )
+ * )
+ * @OA\Server(
+ *      url=L5_SWAGGER_CONST_HOST,
+ *      description="Demo API Server"
+ * )
+/**
+ * @OA\SecurityScheme(
+ *     securityScheme="api_key",
+ *     type="apiKey",
+ *     in="header",
+ *     name="api_key"
+ * )
+ * @OA\SecurityScheme(
+ *     securityScheme="petstore_auth",
+ *     type="oauth2",
+ *     @OA\Flow(
+ *         authorizationUrl="https://petstore.swagger.io/oauth/dialog",
+ *         flow="implicit",
+ *         scopes={
+ *             "read:pets": "read your API",
+ *             "write:pets": "modify pets in your account"
+ *         }
  *     )
  * )
  */
